--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -1,12 +1,11 @@
 authoritative;
-default-lease-time 700;
-max-lease-time 8000;
-
-subnet 192.168.2.0 netmask 255.255.255.0 {
-option routers 192.168.2.1;
-option subnet-maks 255.255.255.0;
+default-lease-time 600;
+max-lease-time 7200;
+subnet 10.128.2.0 netmask 255.255.255.0 {
+option routers 10.128.2.1;
+option subnet-mask 255.255.255.0;
 option domain-name "Starbucks";
-option domain-name-servers 8.8.8.8 4.2.2.2 192.168.1.1;
-range 192.168.2.100 192.168.2.150;
+option domain-name-servers 10.128.2.1;
+range 10.128.2.50 10.128.2.150;
 }
 
