--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -5,7 +5,7 @@ subnet 10.128.2.0 netmask 255.255.255.0 {
 option routers 10.128.2.1;
 option subnet-mask 255.255.255.0;
 option domain-name "Starbucks";
-option domain-name-servers 10.128.2.1;
+option domain-name-servers 8.8.8.8, 10.128.2.1;
 range 10.128.2.50 10.128.2.150;
 }
 
